Typos and added a line to the TODO.txt

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,4 @@ TODO:
     - Check for file mismatch during POST test.
   * Benchmarking,
     - Refactor into seperate functions to make benchmarking of uploadHandler & viewHandler possible.
+  * General tweaks and caching for Nginx configuration files.
